add makefile to support multiple C files (#1195)
* tcc-based vscode project for windows

Signed-off-by: misterpah <misterpah@gmail.com>

* add makefile to support multiple C files

--- a/VSCode_tcc_win/.vscode/tasks.json
+++ b/VSCode_tcc_win/.vscode/tasks.json
@@ -16,7 +16,10 @@
         {
             "label": "build & run",
             "type": "shell",
-            "command": "tcc.exe ${workspaceFolder}\\${fileBasename} -o ${workspaceFolder}\\${fileBasenameNoExtension}.exe -std=c99 -Wall -lmsvcrt -lraylib -lopengl32 -lgdi32 -lkernel32 -lshell32 -luser32 -lwinmm -Wl,-subsystem=gui && ${fileBasenameNoExtension}.exe",
+            "command": "make.exe all workplaceFolder=${workspaceFolder} outputExe=${workspaceFolderBasename}.exe",
+            "args":[
+                "&& ${workspaceFolderBasename}.exe",
+            ],
             "options": {
                 "env":{
                     "PATH" : "C:\\raylib\\tcc\\;%PATH%"
